--- a/SampleSendOTP/Base.lproj/Main.storyboard
+++ b/SampleSendOTP/Base.lproj/Main.storyboard
@@ -38,6 +38,42 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="-106" y="356"/>
+        </scene>
+        <!--Swift View Controller-->
+        <scene sceneID="w14-Oq-BoC">
+            <objects>
+                <viewController id="f20-a6-JJe" customClass="SwiftViewController" customModule="SampleSendOTP" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="fEf-Y1-TTD"/>
+                        <viewControllerLayoutGuide type="bottom" id="x1j-sO-pqv"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="BK4-PC-Dyv">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Rul-0p-CwC">
+                                <rect key="frame" x="253" y="285" width="95" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="OIb-j4-S8U"/>
+                                    <constraint firstAttribute="width" constant="95" id="e5J-cT-AyL"/>
+                                </constraints>
+                                <state key="normal" title="Call SendOTP"/>
+                                <connections>
+                                    <action selector="openSendOtp:" destination="f20-a6-JJe" eventType="touchUpInside" id="Xl3-h0-BiX"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="Rul-0p-CwC" firstAttribute="centerY" secondItem="BK4-PC-Dyv" secondAttribute="centerY" id="TcB-nx-ede"/>
+                            <constraint firstItem="Rul-0p-CwC" firstAttribute="centerX" secondItem="BK4-PC-Dyv" secondAttribute="centerX" id="bYT-1K-Sls"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="mYq-ap-rvQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="530" y="356"/>
         </scene>
     </scenes>
 </document>
