--- a/SampleSendOTP/Base.lproj/Main.storyboard
+++ b/SampleSendOTP/Base.lproj/Main.storyboard
@@ -1,8 +1,12 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -14,22 +18,22 @@
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5hh-FU-OYn">
-                                <rect key="frame" x="253" y="285" width="95" height="30"/>
+                                <rect key="frame" x="140" y="318.5" width="95" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="95" id="9bZ-Rc-IsX"/>
                                     <constraint firstAttribute="height" constant="30" id="SKC-86-H9l"/>
                                 </constraints>
                                 <state key="normal" title="Call SendOTP"/>
                                 <connections>
-                                    <action selector="callSendOTPButtonAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="gq1-SD-tS1"/>
+                                    <action selector="callSendOtp:" destination="BYZ-38-t0r" eventType="touchUpInside" id="oni-ot-x9V"/>
                                 </connections>
                             </button>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="5hh-FU-OYn" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Jug-v2-PcE"/>
                             <constraint firstItem="5hh-FU-OYn" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="ltl-8B-kEq"/>
@@ -49,22 +53,22 @@
                         <viewControllerLayoutGuide type="bottom" id="x1j-sO-pqv"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="BK4-PC-Dyv">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Rul-0p-CwC">
-                                <rect key="frame" x="253" y="285" width="95" height="30"/>
+                                <rect key="frame" x="140" y="318.5" width="95" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="OIb-j4-S8U"/>
                                     <constraint firstAttribute="width" constant="95" id="e5J-cT-AyL"/>
                                 </constraints>
                                 <state key="normal" title="Call SendOTP"/>
                                 <connections>
-                                    <action selector="openSendOtp:" destination="f20-a6-JJe" eventType="touchUpInside" id="Xl3-h0-BiX"/>
+                                    <action selector="openSendOtp:" destination="f20-a6-JJe" eventType="touchUpInside" id="fUr-Fy-IF1"/>
                                 </connections>
                             </button>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="Rul-0p-CwC" firstAttribute="centerY" secondItem="BK4-PC-Dyv" secondAttribute="centerY" id="TcB-nx-ede"/>
                             <constraint firstItem="Rul-0p-CwC" firstAttribute="centerX" secondItem="BK4-PC-Dyv" secondAttribute="centerX" id="bYT-1K-Sls"/>
